# ilogcat

./: .gitignore  BUGS.md  Dockerfile  README.md  install.sh  state.json
.github/workflows/: build.yml
code/: Cargo.toml
code/src/: app.rs  app_tabs.rs  bookmark.rs  config.rs  export.rs  main.rs  stats.rs
code/src/filter/: enhanced.rs  keyword.rs  level.rs  mod.rs  regex_filter.rs
code/src/i18n/: mod.rs
code/src/log/: file_watcher.rs  local.rs  mod.rs  parser.rs  remote.rs  source.rs
code/src/ssh/: client.rs  config.rs  mod.rs  sftp.rs
code/src/ui/: dialogs.rs  file_panel.rs  filter_bar.rs  log_view.rs  mod.rs  search_bar.rs  tabs.rs  toolbar.rs  window.rs
docs/: design.md  requirements.md  usage.md
state/: project.json  state.json
