[package]
name = "ilogcat"
version = "0.6.0"
edition = "2021"
authors = ["ayukyo"]
description = "A logcat-like log viewer for Linux, inspired by Android Studio Logcat"

[dependencies]
gtk4 = "0.7"
glib = "0.18"
ssh2 = "0.9"
regex = "1.10"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
shlex = "1.3"
dirs = "5.0"

[build-dependencies]
gtk4 = "0.7"